--- a/javascript-obfuscation-and-deobfuscation.html
+++ b/javascript-obfuscation-and-deobfuscation.html
@@ -86,19 +86,9 @@
 <p>Além disso, selfbots frequentemente usam bibliotecas externas. Mesmo que o index.js não mostre nada suspeito após desobfuscação, é provável que bibliotecas incluídas contenham o código malicioso, como keyloggers escondidos.</p>
 <p><img src="./icons/selfbot-index.png"></p>
 
-
-
-
-
-
-
-
-
-
-
     </main>
     <footer>
-        <a href="blog.html">/blog.html</a> | <a href="/about.html">/about.html</a> | <a href="/contact">contact</a>
+        <a href="index.html">/index.html</a>
     </footer>
   </body>
 </html>
