--- a/javascript-obfuscation-and-deobfuscation.html
+++ b/javascript-obfuscation-and-deobfuscation.html
@@ -16,7 +16,7 @@
   <h1>JavaScript Obfuscation and Deobfuscation</h1>
 <p>29 maio de 2024 | Author: Maiquel Paiva (<a href="https://twitter.com/untw0">@untw0</a>)</p><br></div>
 
-<h1 id="introdução">1. Introdução</h1>
+<h1 id="introdução">Introdução</h1>
 ㅤ
 <p>Em ambientes digitais, muitos atores mal-intencionados recorrem à prática de ofuscar seus códigos, tornando-os menos detectáveis por sistemas de segurança e menos compreensíveis para outros desenvolvedores. A capacidade de desofuscar tais códigos é uma técnica valiosa em diversos contextos reais, como na avaliação de aplicativos web, permitindo identificar tentativas de ocultação de dados sensíveis por parte dos desenvolvedores. Além disso, os defensores podem usar essa habilidade para analisar e desofuscar códigos responsáveis por ataques, como em casos de phishing.</p>
 ㅤ
