--- a/blog.html
+++ b/blog.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>untw0 blog</title>
+    <link rel="stylesheet" href="./css/blog.css">
 </head>
 <body>
     <header>
-        <h1>Blogs</h1>
+        <h1>My Blog</h1>
     </header>
     <main>
         <article class="blog-post">
             <a href="javascript-obfuscation-and-deobfuscation.html">
                 <h2>JavaScript Obfuscation and Deobfuscation</h2>
-                <p class="date">May 28, 2024 • 10 min • @untw0</p>
+                <p class="date">Maio 28, 2024 • 10 min • @untw0</p>
                 <p>Understand how Hackers, Crackers or Developers use obfuscation as a security measure to protect their intellectual property or to add an extra layer of security to their applications.</p>
             </a>
         </article>
     </main>
+    <footer>
+        <a href="about.html">/about.html</a>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
