--- a/javascript-obfuscation-and-deobfuscation.html
+++ b/javascript-obfuscation-and-deobfuscation.html
@@ -15,7 +15,7 @@
   <h1>JavaScript Obfuscation and Deobfuscation</h1>
 <p>May 16, 2024 | Author: Maiquel Paiva (<a href="https://twitter.com/untw0">@untw0</a>)</p><br></div>
 
-<h1 id="introduction">1. Introduction</h1>
+<h1 id="introduction">Introduction</h1>
 ㅤ
 <p>In digital environments, many malicious actors resort to the practice of obfuscating their code, making it less detectable by security systems and less understandable to other developers. The ability to deobfuscate such code is a valuable technique in various real-world contexts, such as in the evaluation of web applications, allowing the identification of attempts by developers to conceal sensitive data. Additionally, defenders can use this skill to analyze and deobfuscate code responsible for attacks, such as in phishing cases.</p>
 ㅤ
