--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,13 @@
                 <p>Understand how Hackers, Crackers or Developers use obfuscation as a security measure to protect their intellectual property or to add an extra layer of security to their applications.</p>
             </a>
         </article>
+        <article class="blog-post">
+            <a href="cpu-and-assembly.html">
+                <h2>Introduction to CPU Architecture and Assembly Programming: Concepts and Practical Examples</h2>
+                <p class="date">Maio 28, 2024 • 10 min • @untw0</p>
+                <p>Understand how Hackers, Crackers or Developers use obfuscation as a security measure to protect their intellectual property or to add an extra layer of security to their applications.</p>
+            </a>
+        </article>
     </main>
     <footer>
         <a href="about.html">/about.html</a>
@@ -25,3 +32,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
