--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <p>> untw0 (Discord)</p>
     </main>
     <footer>
-        <a href="blog.html">/blog.html</a>
+        <a href="index.html">/index.html</a>
     </footer>
   </body>
 </html>
