--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
         </article>
     </main>
     <footer>
-        <a href="about.html">/about.html</a>
+        <a href="index.html">/index.html</a>
     </footer>
     <script src="script.js"></script>
 </body>
