--- a/javascript-obfuscation-and-deobfuscation.html
+++ b/javascript-obfuscation-and-deobfuscation.html
@@ -86,7 +86,7 @@
 
     </main>
     <footer>
-        <a href="blog.html">/blog.html</a>
+        <a href="index.html">/index.html</a>
     </footer>
   </body>
 </html>
