--- a/cpu-and-assembly.html
+++ b/cpu-and-assembly.html
@@ -30,7 +30,7 @@
 <p>In short: Separate Memory. The CPU has separate memories for data and instructions. There are separate buses for instructions and data, allowing simultaneous access, which potentially increases processing speed.</p>
     </main>
     <footer>
-        <a href="blog.html">/blog.html</a>
+        <a href="index.html">/index.html</a>
     </footer>
   </body>
 </html>
