--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="javascript-obfuscation-and-deobfuscation.html">
                 <h2>JavaScript Obfuscation and Deobfuscation</h2>
                 <p class="date">Maio 28, 2024 • 10 min • @untw0</p>
-                <p>Understand how Hackers, Crackers or Developers use obfuscation as a security measure to protect their intellectual property or to add an extra layer of security to their applications.</p>
+                <p>Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
             </a>
         </article>
         <article class="blog-post">
