--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <article class="blog-post">
             <a href="javascript-obfuscation-and-deobfuscation.html">
                 <h2>JavaScript Obfuscation and Deobfuscation</h2>
-                <p class="date">Maio 28, 2024 • 10 min • @untw0</p>
+                <p class="date">May 28, 2024 • 10 min • @untw0</p>
                 <p>Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
             </a>
         </article>
