--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </article>
     </main>
     <footer>
-        <a href="blog.html">/blog.html</a>
+        <a href="about.html">/about.html</a>
     </footer>
     <script src="script.js"></script>
 </body>
