--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
 <p>> Exploration of Vulnability in Binaries and Web Application</p>
 
 <p><h2>Meus Articles and Researches</h2></p>
-<p>> JavaScript Obfuscation and Deobfuscation - (My blog)</p>
+<p>> JavaScript Obfuscation and Deobfuscation - (My Blog)</p>
+<p>> Introduction to CPU Architecture and Assembly Programming - (My Blog)<p>
 
 <p><h2>Any questions please contact us</h2></p>
 <p>> https://github.com/unwtw0</p>
