--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <p>> Low-level language programming</p>
 <p>> Exploration of Vulnability in Binaries and Web Application</p>
 
-<p><h2>Meus Articles and Researches</h2></p>
+<p><h2>My Articles and Researches</h2></p>
 <p>> JavaScript Obfuscation and Deobfuscation - (My Blog)</p>
 <p>> Introduction to CPU Architecture and Assembly Programming - (My Blog)<p>
 
