--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     </header>
     <main>
         <article class="blog-post">
-            <a href="javascript-obfuscation-and-deobfuscation.html">
+            <a href="paper/javascript-obfuscation-and-deobfuscation.html">
                 <h2>JavaScript Obfuscation and Deobfuscation</h2>
-                <p class="date">May 28, 2024 • 10 min • @untw0</p>
+                <p class="date">Maio 28, 2024 • 10 min • @untw0</p>
                 <p>Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
             </a>
         </article>
         <article class="blog-post">
-            <a href="cpu-and-assembly.html">
-                <h2>Introduction to CPU Architecture and Assembly Programming: Concepts and Practical Examples</h2>
+            <a href="paper/cpu-and-assembly.html">
+                <h2>Understanding CPU Architecture Using Assembly Code</h2>
                 <p class="date">Jun 01, 2024 • 2 min • @untw0</p>
                 <p>Talking a little about CPU and Assembly, the goal is to understand how everything works.</p>
             </a>
@@ -32,4 +32,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
