--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <p>I'm Maiquel Paiva(untw0), I'm an independent security researcher.</p>
 ㅤ
 <p>> Offensive Security</p>
-<p>> Security Research @ Onmitsu</p>
+<p>> Security Research @ ByteLocker</p>
 <p>> Low-level language programming</p>
 <p>> Exploration of Vulnability in Binaries and Web Application</p>
 
