--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="./icons/wallpaper/aranha.png"/>
     <link rel="stylesheet" type="text/css" href="./css/paper.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,17 +16,17 @@
 <p>I'm Maiquel Paiva(untw0), I'm an independent security researcher.</p>
 ㅤ
 <p>> Offensive Security</p>
-<p>> Security Research @ ByteLocker</p>
+<p>> Security Research @ <a href="https://instagram.com/bytelockers">bytelockers</a></p>
 <p>> Low-level language programming</p>
-<p>> Exploration of Vulnability in Binaries and Web Application</p>
 
-<p><h2>My Articles and Researches</h2></p>
-<p>> JavaScript Obfuscation and Deobfuscation - (My Blog)</p>
-<p>> Introduction to CPU Architecture and Assembly Programming - (My Blog)<p>
+<p><h2>Meus Articles and Researches</h2></p>
+<a href="paper/javascript.html">> JavaScript Obfuscation and Deobfuscation - (My blog)</a>
+<p><a href="paper/keylogger.html">> Understanding How a Keylogger Works in Practice - (My Blog)</a></p>
 
 <p><h2>Any questions please contact us</h2></p>
-<p>> https://github.com/unwtw0</p>
-<p>> https://twitter.com/untw0</p>
+<a href="https://github.com/unwt0">> github.com/unwt0</a>
+<p><a href="https://twitter.com/untw0">> twitter.com/untw0</a></p>
+
 <p>> untw0 (Discord)</p>
     </main>
     <footer>
