--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="./pt-br/paper/"</li>
             </ul>
             <ul class="social-links">
                 <li><a href="https://youtube.com/@untw0" target="_blank"><i class="fab fa-youtube"></i></a></li>
@@ -26,23 +27,30 @@
     <main>
         <article class="blog-post">
             <a href="paper/javascript.html">
-                <h2>JavaScript Obfuscation and Deobfuscation</h2>
-                <p class="date">Maio 28, 2024 • @untw0</p>
+                <h2>JavaScript Obfuscation and Deobfuscation [English]</h2>
+                <p class="date">May 28, 2024 • @untw0</p>
                 <p>Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
             </a>
         </article>
         <article class="blog-post">
-            <a href="paper/keylogger.html">
-                <h2>Understanding How a Keylogger Works in Practice</h2>
-                <p class="date">Jun 06, 2024 • @untw0</p>
-                <p>By creating a Keylogger in C++ and understanding how it works and how it acts, do you know what its real objectives are?</p>
+            <a href="paper/dll-malware.html">
+                <h2>DLL Hijacking: A Help That Can Be Dangerous [English]</h2>
+                <p class="date">Jun 13, 2024 • @untw0</p>
+                <p>Let's see how these DLL Hijacking work and why they are being widely used in cyberattacks.</p>
             </a>
         </article>
         <article class="blog-post">
-            <a href="paper/dll-malware.html">
-                <h2>DLL Malware: A Growing Threat on the Global Scenario</h2>
-                <p class="date">Jun 13, 2024 • @untw0</p>
-                <p>Let's see how these dll malwares work and why they are being widely used in cyberattacks.</p>
+            <a href="paper/javascript-br.html">
+                <h2>Ofuscação e desofuscação do JavaScript [Português]</h2>
+                <p class="date">Maio 28, 2024 • @untw0</p>
+                <p>Entendendo como a Ofuscação e a Desofuscação funcionam. Vamos entender por que isso é bom e perigoso ao mesmo tempo.</p>
+            </a>
+        </article>
+        <article class="blog-post">
+            <a href="paper/dll-malware-br.html">
+                <h2>DLL Hijacking: A ajuda que pode ser perigosa [Potuguês]</h2>
+                <p class="date">Junho 13, 2024 • @untw0</p>
+                <p>Vamos ver como esses DLL Hijacking funcionam e por que eles estão sendo amplamente utilizados em ataques cibernéticos.</p>
             </a>
         </article>
     </main>
