--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </a>
         </article>
         <article class="blog-post">
-            <a href="paper/dll-malware.html">
+            <a href="paper/dll-hijacking.html">
                 <h2>DLL Hijacking: A Help That Can Be Dangerous [English]</h2>
                 <p class="date">Jun 13, 2024 • @untw0</p>
                 <p>Let's see how these DLL Hijacking work and why they are being widely used in cyberattacks.</p>
@@ -47,7 +47,7 @@
             </a>
         </article>
         <article class="blog-post">
-            <a href="paper/dll-malware-br.html">
+            <a href="paper/dll-hijacking-br.html">
                 <h2>DLL Hijacking: A ajuda que pode ser perigosa [Potuguês]</h2>
                 <p class="date">Junho 13, 2024 • @untw0</p>
                 <p>Vamos ver como esses DLL Hijacking funcionam e por que eles estão sendo amplamente utilizados em ataques cibernéticos.</p>
