--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 <p><h2>Meus Articles and Researches</h2></p>
 <a href="paper/javascript.html">> JavaScript Obfuscation and Deobfuscation - (My blog)</a>
-<p><a href="paper/keylogger.html">> Understanding How a Keylogger Works in Practice - (My Blog)</a></p>
+<p><a href="paper/dll-hijacking">> DLL Hijacking: A Help That Can Be Dangerous - (My Blog)</a></p>
 
 <p><h2>Any questions please contact us</h2></p>
 <a href="https://github.com/unwt0">> github.com/unwt0</a>
