--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="./pt-br/paper/"</li>
             </ul>
             <ul class="social-links">
                 <li><a href="https://youtube.com/@untw0" target="_blank"><i class="fab fa-youtube"></i></a></li>
@@ -27,30 +26,15 @@
     <main>
         <article class="blog-post">
             <a href="paper/javascript.html">
-                <h2>JavaScript Obfuscation and Deobfuscation [English]</h2>
+                <h2>JavaScript Obfuscation and Deobfuscation</h2>
                 <p class="date">May 28, 2024 • @untw0</p>
                 <p>Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
             </a>
-        </article>
         <article class="blog-post">
-            <a href="paper/dll-hijacking.html">
-                <h2>DLL Hijacking: A Help That Can Be Dangerous [English]</h2>
-                <p class="date">Jun 17, 2024 • @untw0</p>
-                <p>Let's see how these DLL Hijacking work and why they are being widely used in cyberattacks.</p>
-            </a>
-        </article>
-        <article class="blog-post">
-            <a href="paper/javascript-br.html">
-                <h2>Ofuscação e desofuscação do JavaScript [Português]</h2>
-                <p class="date">Maio 28, 2024 • @untw0</p>
-                <p>Entendendo como a Ofuscação e a Desofuscação funcionam. Vamos entender por que isso é bom e perigoso ao mesmo tempo.</p>
-            </a>
-        </article>
-        <article class="blog-post">
-            <a href="paper/dll-hijacking-br.html">
-                <h2>DLL Hijacking: A ajuda que pode ser perigosa [Potuguês]</h2>
-                <p class="date">Junho 17, 2024 • @untw0</p>
-                <p>Vamos ver como esses DLL Hijacking funcionam e por que eles estão sendo amplamente utilizados em ataques cibernéticos.</p>
+            <a href="paper/china.html">
+                <h2>Dragão Vermelho: O Exército de Ciberespiões e Malwares da China</h2>
+                <p class="date">Jul 26, 2024 • @untw0</p>
+                <p>As atividades de espionagem cibernética da China têm sido uma preocupação constante para muitas nações.</p>
             </a>
         </article>
     </main>
