--- a/paper/china.html
+++ b/paper/china.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Malware DLL: A Growing Threat on the Global Scene</title>
+    <title>Dragão Vermelho: O Exército de Ciberespiões e Malwares da China</title>
   </head>
   <body>
     <header>
