--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <p class="date">May 28, 2024 • @untw0</p>
                 <p>Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
             </a>
+        </article>
         <article class="blog-post">
             <a href="paper/china.html">
                 <h2>Dragão Vermelho: O Exército de Ciberespiões e Malwares da China</h2>
