--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
         </article>
         <article class="blog-post">
-            <a href="paper/china.html">
+            <a href="paper/china-br.html">
                 <h2>Dragão Vermelho: O Exército de Ciberespiões e Malwares da China</h2>
                 <p class="date">Jul 26, 2024 • @untw0</p>
                 <p>As atividades de espionagem cibernética da China têm sido uma preocupação constante para muitas nações.</p>
