--- a/papers.html
+++ b/papers.html
@@ -20,9 +20,14 @@
     <section id="papers">
         <h2>My Papers</h2>
         
+        <a href="./papers/pwd.html" class="paper-bubble">
+            <h3>[PAPER NOVO] Contornando a Verificação de String e Lendo a Flag</h3>
+            <p class="reading-time">Set 07, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
+            <p class="summary">O objetivo é contornar a verificação de uma string e ler a flag.</p>
+        </a>
         <a href="./papers/javascript-obfuscation.html" class="paper-bubble">
             <h3>JavaScript Obfuscation and Deobfuscation</h3>
-            <p class="reading-time">May 28, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
+            <p class="reading-time">May 28, 2024 | by: @untw0 | Read: 10 min | Level: Beginner</p>
             <p class="summary">Understanding how Obfuscation and Deobfuscation works, Let's understand how this is good and dangerous at the same time.</p>
         </a>
     </section>
