--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
     <section id="home">
         <h2>hello, who is untw0?</h2>
-        <p>I'm Maiquel Paiva (untw0), an independent security researcher.</p>
+        <p>H'm Maiquel Paiva (untw0), an independent security researcher.</p>
         <p>> I study about OffSec + Pwn + Eng Rev</p>
         <p>> Team of Security Research Independent @ <a href="https://instagram.com/@x64byte">x64byte</a></p>
         <p>> I like Low-level language</p>
