--- a/papers/pwd.html
+++ b/papers/pwd.html
@@ -68,7 +68,7 @@
     <div class="container">
         <h1>Contornando a Verificação de String e Lendo a Flag</h1>
 
-        <p>Welcome, eu sou @untw0, e o objetivo de hoje é contornar a verificação de uma string e ler a flag. A função <code>bypass_me</code> é a principal responsável por essa verificação. Vamos revisar a função e detalhar o processo para criar um exploit que permita contornar essa verificação e acessar a flag.</p>
+        <p>Hello, eu sou @untw0, e o objetivo de hoje é contornar a verificação de uma string e ler a flag. A função <code>bypass_me</code> é a principal responsável por essa verificação. Vamos revisar a função e detalhar o processo para criar um exploit que permita contornar essa verificação e acessar a flag.</p>
 
         <h2>Análise da Função <code>bypass_me</code></h2>
 
