--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Researcher Hacking Blog</title>
-    <link rel="icon" href="./photos/esqueleto.gif"/>
     <link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 <body>
@@ -18,10 +17,9 @@
     </nav>
 
     <section id="home">
-        <h2>hello, who is untw0?</h2>
-        <p>H'm Maiquel Paiva (untw0), an independent security researcher.</p>
+        <h2>Hello, who is untw0?</h2>
+        <p>I'm Maiquel Paiva (untw0), an independent security researcher.</p>
         <p>> I study about OffSec + Pwn + Eng Rev</p>
-        <p>> Team of Security Research Independent @ <a href="https://instagram.com/@x64byte">x64byte</a></p>
         <p>> I like Low-level language</p>
 
         <p><h2>My papers</h2></p>
