--- a/papers.html
+++ b/papers.html
@@ -19,8 +19,8 @@
     <section id="papers">
         <h2>My Papers</h2>
         
-        <a href="./papers/pwd.html" class="paper-bubble">
-            <h3>[PAPER NOVO] Contornando a Verificação de String e Lendo a Flag</h3>
+        <a href="./papers/pwn-challenge.html" class="paper-bubble">
+            <h3>Contornando a Verificação de String e Lendo a Flag do CTF</h3>
             <p class="reading-time">Set 07, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
             <p class="summary">O objetivo é contornar a verificação de uma string e ler a flag.</p>
         </a>
