--- a/papers/pwn-challenge.html
+++ b/papers/pwn-challenge.html
@@ -66,7 +66,7 @@
 
 <body>
     <div class="container">
-        <h1>Contornando a Verificação de String e Lendo a Flag</h1>
+        <h1>Contornando a Verificação de String e Lendo a Flag do CTF</h1>
 
         <p>Eae pessoal, eu sou o @untw0, e o objetivo de hoje é contornar a verificação de uma string e ler a flag. A função <code>bypass_me</code> é a principal responsável por essa verificação. Vamos revisar a função e detalhar o processo para criar um exploit que permita contornar essa verificação e acessar a flag.</p>
 
