--- a/papers.html
+++ b/papers.html
@@ -20,9 +20,9 @@
         <h2>My Papers</h2>
         
         <a href="./papers/pwn-challenge.html" class="paper-bubble">
-            <h3>Contornando a Verificação de String e Lendo a Flag do CTF</h3>
+            <h3>Bypassing String Verification and Reading the CTF Flag</h3>
             <p class="reading-time">Set 07, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
-            <p class="summary">O objetivo é contornar a verificação de uma string e ler a flag.</p>
+            <p class="summary">The goal is to bypass the string check and read the flag.</p>
         </a>
         <a href="./papers/javascript-obfuscation.html" class="paper-bubble">
             <h3>JavaScript Obfuscation and Deobfuscation</h3>
