Update and rename papers.html to posts.html

--- a/posts.html
+++ b/posts.html
@@ -19,7 +19,7 @@
     <section id="papers">
         <h2>My Papers</h2>
         
-        <a href="./papers/pwn-challenge.html" class="paper-bubble">
+        <a href="./posts/pwn-challenge.html" class="paper-bubble">
             <h3>Bypassing String Verification and Reading the CTF Flag</h3>
             <p class="reading-time">Set 07, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
             <p class="summary">The goal is to bypass the string check and read the flag.</p>
