--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="#">about</a></li>
-            <li><a href="papers.html">papers</a></li>
+            <li><a href="posts.html">posts</a></li>
         </ul>
     </nav>
 
