--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="#">home</a></li>
             <li><a href="about.html">about</a></li>
-            <li><a href="papers.html">papers</a></li>
+            <li><a href="posts.html">posts</a></li>
         </ul>
     </nav>
 
