--- a/posts.html
+++ b/posts.html
@@ -24,7 +24,7 @@
             <p class="summary">Shellcode Injection</p>
         </a>
         <a href="./posts/pwn-challenge.html" class="paper-bubble">
-            <h3>Bypassing String Verification and Reading the CTF Flag</h3>
+            <h3>Bypassing String Verification and Reading the Flag</h3>
             <p class="reading-time">Set 07, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
             <p class="summary">The goal is to bypass the string check and read the flag.</p>
         </a>
