--- a/posts.html
+++ b/posts.html
@@ -16,7 +16,7 @@
     </nav>
     <section id="papers">
         <h2>My Papers</h2>
-        <a href="./posts/pwn-challenge.html" class="paper-bubble">
+        <a href="./posts/pwn-challenge2.html" class="paper-bubble">
             <h3>Exploring Shellcode Injection</h3>
             <p class="reading-time">Set 20, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
             <p class="summary">Shellcode Injection</p>
