--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Researcher Hacking Blog - Papers</title>
+    <title>Researcher Hacking Blog</title>
     <link rel="stylesheet" href="./styles/posts.css">
 </head>
 <body>
