--- a/posts.html
+++ b/posts.html
@@ -19,7 +19,7 @@
         <a href="./posts/pwn-challenge2.html" class="paper-bubble">
             <h3>Buffer Overflow and Shellcode Injection</h3>
             <p class="reading-time">Set 20, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
-            <p class="summary">Exploiting Buffer Overflow vulnerabilities to perform Shellcode Injection</p>
+            <p class="summary">Exploiting Buffer Overflow vulnerabilities to perform Shellcode Injection.</p>
         </a>
         <a href="./posts/pwn-challenge.html" class="paper-bubble">
             <h3>Bypassing String Verification and Reading the Flag</h3>
