--- a/posts.html
+++ b/posts.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a></li>
-            <li><a href="#">papers</a></li>
+            <li><a href="#">posts</a></li>
         </ul>
     </nav>
     <section id="papers">
