--- a/about.html
+++ b/about.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Researcher Hacking Blog</title>
-    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/about.css">
 </head>
 <body>
 
     <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="#">about</a></li>
+            <li><a href="index.html">./home</a></li>
+            <li><a href="#">./about</a></li>
         </ul>
     </nav>
 
     <section id="home">
-        <h2>Hello, who is untw0?</h2>
-        <p>I'm Maiquel Paiva (untw0), an independent security researcher.</p>
-        <p>> I study about OffSec + Pwn + Eng Rev</p>
-        <p>> I like Low-level language</p>
+        <h2>Hello!</h2>
+        <p>I'm Maiquel Paiva (untw0), an Security Researcher.</p>
+        <p>> PWN + REVERSE ENGINEERING. + MALDEV + OFFSEC.</p>
+        <p>> C, C++, RUST, ASSEMBLY, PYTHON, BASH.</p>
 
         <h2>Any questions please contact us</h2>
         <p><a href="https://github.com/untw0">> github.com/unwt0</a></p>
