--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Researcher Hacking Blog</title>
-    <link rel="stylesheet" type="text/css" href="./styles/about.css">
+    <link rel="stylesheet" type="text/css" href="./styles/about.css ">
 </head>
 <body>
 
@@ -17,14 +17,23 @@
 
     <section id="home">
         <h2>Hello!</h2>
-        <p>I'm Maiquel Paiva (untw0), an Security Researcher.</p>
-        <p>> PWN + REVERSE ENGINEERING. + MALDEV + OFFSEC.</p>
-        <p>> C, C++, RUST, ASSEMBLY, PYTHON, BASH.</p>
-
+        <p>> I'm Maiquel Paiva (untw0). I'm work with Security Research.</p>
+        <p>> I love finding flaws, writing exploits, and even analyzing malware.</p>
+        <p>> Binary exploitation, kernel exploitation and reverse engineering.</p>
+        
         <h2>Any questions please contact us</h2>
         <p><a href="https://github.com/untw0">> github.com/unwt0</a></p>
-        <p><a href="https://twitter.com/untw0">> twitter.com/untw0</p>
+        <p><a href="https://twitter.com/untw0">> twitter.com/untw0</a></p>
         <p>> untw0 (Discord)</p>
+
+        <h2>My Profile in CTF Pltaforms</h2>
+        <p><a href="https://www.root-me.org/untw0">> root-me.org/untw0</a></p>
+        <p><a href="https://pwnable.tw/user/36967">> pwnable.tw/user/36967</a></p>
+
+        <h2>My Projects</h2>
+        <p><a href="https://github.com/untw0/freechat-opensource">> github.com/untw0/freechat-opensource</a></p>
+        <p><a href="https://github.com/untw0/exploits">> github.com/untw0/exploits</a></p>
+
     </section>
 
     <script src="script.js"></script>
