--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     <section id="papers">
         <h2>Pwn Challenge</h2>
-        <a href="./posts/posts/buffer-overflow.html" class="paper-bubble">
+        <a href="./posts/buffer-overflow.html" class="paper-bubble">
             <h3>Buffer Overflow: Exploiting</h3>
             <p class="summary">Fev 10, 2025 | by: @untw0 | Read: 5 min | Level: Beginner</p>
             <p class="summary">Exploiting Buffer Overflow vulnerabilities for crafting the exploit.</p>
