--- a/about.html
+++ b/about.html
@@ -17,9 +17,8 @@
 
     <section id="home">
         <h2>Hello!</h2>
-        <p>> I'm Maiquel Paiva (untw0). I'm work with Security Research.</p>
-        <p>> I love finding flaws, writing exploits, and even analyzing malware.</p>
-        <p>> Binary exploitation, kernel exploitation and reverse engineering.</p>
+        <p>> I'm Maiquel Paiva (untw0).</p>
+        <p>> Pwn/Rev and Writing Exploits.</p>
         
         <h2>Any questions please contact us</h2>
         <p><a href="https://github.com/untw0">> github.com/unwt0</a></p>
@@ -29,10 +28,6 @@
         <h2>My Profile in CTF Pltaforms</h2>
         <p><a href="https://www.root-me.org/untw0">> root-me.org/untw0</a></p>
         <p><a href="https://pwnable.tw/user/36967">> pwnable.tw/user/36967</a></p>
-
-        <h2>My Projects</h2>
-        <p><a href="https://github.com/untw0/freechat-opensource">> github.com/untw0/freechat-opensource</a></p>
-        <p><a href="https://github.com/untw0/exploits">> github.com/untw0/exploits</a></p>
 
     </section>
 
