--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
         </ul>
     </nav>
     <section id="papers">
-        <h2>Pwn Challenge</h2>
-        <a href="./posts/buffer-overflow.html" class="paper-bubble">
-            <h3>Buffer Overflow: Exploiting</h3>
-            <p class="summary">Fev 10, 2025 | by: @untw0 | Read: 5 min | Level: Beginner</p>
-            <p class="summary">Exploiting Buffer Overflow vulnerabilities for crafting the exploit.</p>
-        </a>
+        <h2>Pwn/Rev</h2>
         <a href="./posts/pwn-challenge.html" class="paper-bubble">
             <h3>Buffer Overflow and Shellcode Injection</h3>
             <p class="summary">Set 20, 2024 | by: @untw0 | Read: 5 min | Level: Beginner</p>
